<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textv"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TextView>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/white">

        <TableRow android:background="@color/lightBlue" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col1"
                android:background="@drawable/back2"
                android:textColor="@color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col2"
                android:background="@drawable/back2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:background="@drawable/back2"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1Name"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Desc"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1Values"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2Name"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Desc"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2Values"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3Name"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Desc"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3Values"
                android:background="@drawable/back"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>